Updated GameList so the art is always a uniform size. Added api call to MyList page. Fixed scroll buttons on horizontal scroll list

--- a/web-client/react-spa/src/components/FocusedImageList/FocusedImageList.css
+++ b/web-client/react-spa/src/components/FocusedImageList/FocusedImageList.css
@@ -1,7 +1,7 @@
 .focused-image-list--container {
-  width: 35%;
-  overflow-x: hidden;
-  min-width: 50em;
+  width: 100%;
+  overflow-x: scroll;
+  background-color: rgb(15, 19, 23, 0.5);
 }
 
 .focused-image-list--selected-artwork {
@@ -14,17 +14,18 @@
 }
 
 .focused-image-list--unselected-artwork {
-  border-radius: 15px;
-  width: 100%;
-  height: 100%;
-  max-width: 11em;
-  max-height: 9em;
-  padding: 0.5em;
+  /* border-radius: 15px; */
+  width: 80px;
+  height: 50px;
+  /* max-width: 11em;
+  max-height: 9em; */
 }
 
 .focused-image-list--main-artwork-container {
-  width: 40%;
+  width: 100%;
   margin-bottom: 1em;
+  padding: 10px;
+  background-color: rgb(15, 19, 23, 0.5);
 }
 
 .focused-image-list--main-artwork {
@@ -37,5 +38,20 @@
 
 .focused-image-list--artwork-selection-button {
   border: none;
+  background-color: transparent;
+  background-color: rgb(26, 28, 30) !important;
 
+}
+
+.focused-image-list--ul {
+  /* list-style-type: none;
+  overflow: hidden; */
+  list-style-type : none;
+  display: inline-flex !important;
+  flex-direction: row !important;
+
+}
+
+.focused-image-list--li {
+  /* display: inline; */
 }
